[tool.poetry]
name = "rl_games"
version = "1.6.1"
description = ""
readme = "README.md"
authors = [
    "Denys Makoviichuk <trrrrr97@gmail.com>",
    "Viktor Makoviichuk <victor.makoviychuk@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gym = {version = "^0.25.0", extras = ["classic_control"]}
imageio = "==2.34.0"
msgpack = "==1.0.8"
typing_extensions = "==4.10.0"
numpy = "==1.23.5"
tensorboard = "^2.8.0"
tensorboardX = "^2.5"
PyYAML = "^6.0"
psutil = "^5.9.0"
setproctitle = "^1.2.2"
opencv-python = "^4.5.5"
wandb = "^0.12.11"

ale-py = {version = "^0.7", optional = false}
AutoROM = {version = "^0.4.2", optional = false, extras = ["accept-rom-license"]}
brax = {version = "==0.10.3", optional = false}
jax = {version = "==0.4.25", optional = false}
mujoco = {version = "==3.1.4", optional = false}
envpool = {version = "^0.7.0", optional = false}

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
atari = ["ale-py", "AutoROM"]
brax = ["brax", "jax"]
mujoco = ["mujoco"]
envpool = ["envpool"]
